<resources>
    <string name="app_name">mtkdem2-targel3</string>
    <string name="loginstr">Login</string>
    <string name="passwordstr">Password</string>
    <string name="usernamestr">Username</string>
    <string name="sign_instr">Sign in</string>
    <string name="display_namestr">display name</string>
    <string name="registerstr">Register</string>
    <string name="sign_upstr">Sign Up</string>
    <string name="confirm_passwordstr">confirm password</string>
    <string name="BaseUrl">http://10.0.2.2:5000/api/</string>
    <string name="addbtn">add </string>
    <string name="deletebtn">delete</string>
    <string name="profile">profile</string>
    <string name="logoutbtn">logout</string>
    <string name="channel_name">Channel Msg</string>
    <string name="channel_description">Msg</string>
</resources>