<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainidback1"
    android:layout_height="match_parent"
    android:background="@drawable/backimg"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/sign_upstr"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />


        <EditText
            android:id="@+id/userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/usernamestr"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="20sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Passwordid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/passwordstr"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Passwordconfirmid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/confirm_passwordstr"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/displayname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/display_namestr"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="20sp"
            tools:ignore="VisualLintTextFieldSize" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

    <ImageView
        android:id="@+id/photoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="photo"
            />

        <Button
            android:id="@+id/photobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="upload photo"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

        <Button
            android:id="@+id/Registerbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/registerstr"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />


        <TextView
            android:id="@+id/loginlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have account Click here to login"
          />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>